--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header class="header">
             <img src="./img/calculadora.png" alt="Calculadora">
             <h1>
-                <span>CALCULADORA</span>
-                <span>HORA DE TRABALHO</span>
+                <span>CALCULAR</span>
+                <span>HORAS TRABALHADAS</span>
             </h1>
         </header>
 
@@ -37,7 +37,7 @@
 
         <div class="resultado hidden" id="resultado">
             <span>VALOR DA HORA TRABALHADA</span>
-            <span id="valor-total">R$ 00.00</span>
+            <span id="valor-total">R$ 00,00</span>
             <p>Nesse valor você irá cobrir suas despesas e ter 50% de lucro</p>
         </div>
 
